--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <p>Using the Site Admin&#39;s token you may create a new member (or generate a new token for an existing member) by POSTing a <em>URL encoded</em> JSON string to this endpoint.</p>
 
 <blockquote>
-<p>The JSON data to stringify may look something like this (not yet encoded):</p>
+<p>The JSON data to stringify and encode may look something like this (not yet encoded):</p>
 </blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
     </span><span class="s2">"Names"</span><span class="p">:</span><span class="w"> </span><span class="p">[{</span><span class="w">
@@ -818,7 +818,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </span><span class="p">}</span><span class="w">
 </span></code></pre><h3 id='http-request-3'>HTTP Request</h3>
 <p><code>GET https://api.travsrv.com/MemberAPI.aspx</code></p>
-<h3 id='memberdata-json-object-properties-2'>memberData JSON Object Properties</h3>
+<h3 id='query-parameters-2'>Query Parameters</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
@@ -957,7 +957,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </span><span class="p">}</span><span class="w">
 </span></code></pre><h3 id='http-request-4'>HTTP Request</h3>
 <p><code>GET https://api.travsrv.com/hotel.aspx</code></p>
-<h3 id='query-parameters-2'>Query Parameters</h3>
+<h3 id='query-parameters-3'>Query Parameters</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
@@ -1279,7 +1279,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </span><span class="p">}</span><span class="w">
 </span></code></pre><h3 id='http-request-5'>HTTP Request</h3>
 <p><code>GET https://api.travsrv.com/hotel.aspx</code></p>
-<h3 id='query-parameters-3'>Query Parameters</h3>
+<h3 id='query-parameters-4'>Query Parameters</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
@@ -1653,7 +1653,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </span><span class="p">}</span><span class="w">
 </span></code></pre><h3 id='http-request-6'>HTTP Request</h3>
 <p><code>POST https://api.travsrv.com/hotel.aspx?type=Reservation</code></p>
-<h3 id='query-parameters-4'>Query Parameters</h3>
+<h3 id='query-parameters-5'>Query Parameters</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
@@ -2201,7 +2201,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </span><span class="p">}</span><span class="w">
 </span></code></pre><h3 id='http-request-7'>HTTP Request</h3>
 <p><code>POST https://api.travsrv.com/hotel.aspx?type=Cancellation</code></p>
-<h3 id='query-parameters-5'>Query Parameters</h3>
+<h3 id='query-parameters-6'>Query Parameters</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
