--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <a href="#create-a-new-member" class="toc-h2 toc-link" data-title="create-a-new-member">Create a New Member</a>
                   </li>
                   <li>
-                    <a href="#get-member-by-token" class="toc-h2 toc-link" data-title="get-member-by-token">Get Member by Token</a>
+                    <a href="#get-a-member-by-token" class="toc-h2 toc-link" data-title="get-a-member-by-token">Get a Member by Token</a>
                   </li>
               </ul>
           </li>
@@ -769,7 +769,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <td>The user&#39;s phone number</td>
 </tr>
 </tbody></table>
-<h2 id='get-member-by-token'>Get Member by Token</h2>
+<h2 id='get-a-member-by-token'>Get a Member by Token</h2>
 <p>This endpoint retrieves a member using their member token.</p>
 <pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://api.travsrv.com/MemberAPI.aspx?</span><span class="se">\</span><span class="s2">
 &amp;siteid={SITEID}</span><span class="se">\</span><span class="s2">
