--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               </ul>
           </li>
           <li>
-            <a href="#closed-user-group-users" class="toc-h1 toc-link" data-title="closed-user-group-users">Closed User Group Users</a>
+            <a href="#closed-user-group-users" class="toc-h1 toc-link" data-title="closed-user-group-users">Closed user group users</a>
               <ul class="toc-list-h2">
                   <li>
                     <a href="#get-a-token-for-a-site-admin" class="toc-h2 toc-link" data-title="get-a-token-for-a-site-admin">Get a Token for a Site Admin</a>
@@ -570,7 +570,7 @@ If you use our portal's UI and wanted to linking directly to a particuilar page 
 <p>This is the <code>ArnResponse.Availability.HotelAvailability.Hotel.RatePlan.Room.@Code</code> value specified in the Availability Search results for the room type you are interested.</p>
 <h2 id='rateplancode'><code>ratePlanCode</code></h2>
 <p>This is the <code>ArnResponse.Availability.HotelAvailability.Hotel.RatePlan.@Code</code> value specified in the Availability Search results for the rate plan you are interested in.</p>
-<h1 id='closed-user-group-users'>Closed User Group Users</h1>
+<h1 id='closed-user-group-users'>Closed user group users</h1>
 <p>This section is only for those using the SSO Authentication feature and pertains to managing users and their authentication tokens.  </p>
 
 <p>You will need a Site Admin user in your closed user group site. If you don&#39;t already have one, please <a href="mailto:hello@hotelsforhope.com?Subject=Request%20for%20Site%20Admin%20User">request one</a> be added for your portal/site.</p>
