--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <td>token</td>
 <td>string</td>
 <td>Yes</td>
-<td>Token for the member (not Site Admin token)</td>
+<td>Token for the member (not Site Admin&#39;s)</td>
 </tr>
 </tbody></table>
 <h1 id='hotels'>Hotels</h1><h2 id='availability-search'>Availability Search</h2>
