publish: Modified SSO response with different FIXME
generated from commit 5ebbf717bb97aef7494e685798b47813bfb771c5

--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <p>The above command returns JSON structured like this:</p>
 </blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
+    </span><span class="s2">"FIXME"</span><span class="p">:</span><span class="w"> </span><span class="s2">"......... This is what an invalid response would look like"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"MemberId"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Rewards"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Points"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
