publish: Updating SSO endpoints according to successful Postman test results.
generated from commit f1f3979260eec01e379701153c4bc1dc26faad51

--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
             <a href="#authentication" class="toc-h1 toc-link" data-title="authentication">Authentication</a>
               <ul class="toc-list-h2">
                   <li>
+                    <a href="#query-string" class="toc-h2 toc-link" data-title="query-string">Query String</a>
+                  </li>
+                  <li>
                     <a href="#single-sign-on-sso" class="toc-h2 toc-link" data-title="single-sign-on-sso">Single Sign On (SSO)</a>
                   </li>
               </ul>
@@ -304,7 +307,7 @@
 <p>Welcome to the Hotels For Hope API! You can use our API to access Hotels For Hope API endpoints, which can get information on hundreds of thousands of hotels, their availability, details, as well as create and cancel reservations.</p>
 
 <p>We have examples using a shell. You can view code examples in the dark area to the right, and (when languages become available) you can switch the programming language of the examples with the tabs in the top right.</p>
-<h1 id='authentication'>Authentication</h1>
+<h1 id='authentication'>Authentication</h1><h2 id='query-string'>Query String</h2>
 <p>Hotels For Hope uses a querystring username and password to allow access to the API. You can request Hotels For Hope API credentials by partnering with us and emailing <a href="mailto:hello@hotelsforhope.com">support</a>.</p>
 
 <p>The API credentials are expected in all API requests to the server in the querystring like the following:</p>
@@ -313,6 +316,10 @@
 
 <aside class="notice">
 You must replace <code>{API-USERNAME}</code>, <code>{API-PASSWORD}</code>, and <code>{SITEID}</code> with your personal API credentials and Site ID respectively.
+</aside>
+
+<aside class="warning">
+Considering the sensitive nature of query string based API calls, we highly suggest not exposing these credentials by using them in client-side scripting languages like JavaScript. We recommend making calls with these credentials only using server-side technologies.
 </aside>
 <h2 id='single-sign-on-sso'>Single Sign On (SSO)</h2>
 <p>If you wish to integrate our closed user group portal/site with your own applications and user group, you can utilize our SSO functionality.</p>
@@ -672,7 +679,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </tr>
 </tbody></table>
 <h2 id='create-a-new-member'>Create a New Member</h2>
-<p>Using the Site Admin&#39;s token you may create a new member by POSTing a <em>URL encoded</em> JSON string to this endpoint.</p>
+<p>Using the Site Admin&#39;s token you may create a new member by POSTing a <em>URL encoded</em> JSON string to this endpoint. Calling this endpoint successfully generates a member token, found in the <code>CurrentToken</code> property, which you should save for them if you want to use the &quot;Get a Member by Token&quot; call.</p>
 
 <p>You may notice this call is exactly the same as the &quot;Update an Existing Member&quot; call.</p>
 
@@ -803,7 +810,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </tr>
 </tbody></table>
 <h2 id='update-an-existing-member'>Update an Existing Member</h2>
-<p>Using the Site Admin&#39;s token you may update an existing member (which also generates a new member token for the user, which you should save for them) by POSTing a <em>URL encoded</em> JSON string to this endpoint.</p>
+<p>Using the Site Admin&#39;s token you may update an existing member by POSTing a <em>URL encoded</em> JSON string to this endpoint. Successfully calling this endpoint also generates a new member token for the user in the <code>CurrentToken</code> property, which you should save for them if you want to use the &quot;Get a Member by Token&quot; call.</p>
 
 <p>You may notice this call is exactly the same as the &quot;Create a New Member&quot; call.</p>
 
@@ -934,7 +941,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </tr>
 </tbody></table>
 <h2 id='get-a-member-by-token'>Get a Member by Token</h2>
-<p>This endpoint retrieves a member using their member token.</p>
+<p>This endpoint retrieves a member using their member token. Successfully calling this endpoint also generates a new member token for the user in the <code>CurrentToken</code> property, which you should save for them if you want to call this endpoint again in the future.</p>
 <pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://api.travsrv.com/MemberAPI.aspx?</span><span class="se">\</span><span class="s2">
 &amp;siteid={SITEID}</span><span class="se">\</span><span class="s2">
 &amp;token={MEMBER-TOKEN}"</span>
@@ -943,7 +950,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <p>The above command returns JSON structured like this:</p>
 </blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
-    </span><span class="s2">"MemberId"</span><span class="p">:</span><span class="w"> </span><span class="mi">554642</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"MemberId"</span><span class="p">:</span><span class="w"> </span><span class="mi">54321</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Rewards"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Points"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
     </span><span class="s2">"RedemptionMultiplier"</span><span class="p">:</span><span class="w"> </span><span class="mf">1.0</span><span class="p">,</span><span class="w">
@@ -970,12 +977,12 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
         </span><span class="s2">"UpdateMemberUsername"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
         </span><span class="s2">"FullName"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Testme Tester"</span><span class="w">
     </span><span class="p">}],</span><span class="w">
-    </span><span class="s2">"DebugData"</span><span class="p">:</span><span class="w"> </span><span class="s2">" Successful creation of Member RT-mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"DebugData"</span><span class="p">:</span><span class="w"> </span><span class="s2">" Successful creation of Member RT-12345-mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Error"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"CurrentToken"</span><span class="p">:</span><span class="w"> </span><span class="s2">"E7MUlbdRdlq2RwSs8V4%2fhza25Xwca%2fZLodi%2faddmPl%2bJfpCU7VovYjoSKaMk34PvkSDpD1mqvezzQG0abXzuXP1%2baaiIKCLw7ehGaiI7BNI7Pb%2fYK%2fGJf4fCxKCz5EodA79iweA6gc2nCEOdWmkarTuy4Cd%2f5WtNkU043rF42sshCKGkg%2bIavKgJ6emdL7msPJRykM2hf%2fmHjdDOV%2b7jtuOHpk5bAVVIc5jhUqmqJMa5908EK0VoX1OUT60SkDcw2YLBeXEg6sYPu1Q7mTPc5VUhJ%2b6C6wHM08eOKMrKt6LNRxoB0kXcPyVS1azt1LR48yAegw%2fKXPbdgrCBycjsDedm0ItP9SmW1C6Byw4nt5zivxf%2f0ZIMF07wtZ4JhWVqGuhetKPDE3ddzOLRPyjNgetWddHqoq8Tba%2bKWDcIADYnqgH5NVdVSKvyH5VWY3vMHyhlZQiW23z1a6lZReASYfMMycNfDU2X4EhDOEa0tvUYajpsRlnDIkNcLjxT4KPyrZhl5tVsHECCY0Sasy%2f6zh9ce%2b3HE%2bOEtux%2bEHKfBWrkzwt1vpwyn%2fnXzVd%2bQumpQLw5DOZ2DltHZs%2bfmQ96MoMrBgSx8jS%2bQkR3NQjGAysUOqXK%2fAl38ryHzGe0nSeMkLo5BRYEgiEJK%2bftnZqsEQbZC98E8Fyt2zMGiofGQrR1i5v3gRoOCfqjNYJQAft4ru6GCR5kpm0CsvVvOnKmnA%3d%3d"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"CurrentToken"</span><span class="p">:</span><span class="w"> </span><span class="s2">"E7MUlbdRdlq2RwSs8V4%2fhza25Xwca%2fZLodi%2faddmPl%2bJfpCU7VovYjoSKaMk34PvkSDpD1mqvezzQG0abXzuXP1%2baaiIKCLw7ehGaiI7BNI7Pb%2fYK%2fGJf4fCxKCz5EodA79iweA6gc2nCEOdWmkarTuy4Cd%2f5WtNkU043rF42sshCKGkg%2bIavKgJ6emdL7msPJRykM2hf%2fmHjdDOV%2b7jtuOHpk5bAVVIc5jhUqmqJMa5908EK0VoX1OUT60SkDcw2YLBeXEg6sYPu1Q7mTPc5VUhJ%2b6C6wHM08eOKMrKt6LNRxoB0kXcPyVS1azt1LR48yAegw%2fKXPbdgrCBycjsDedm0ItP9SmW1C6Byw4nt5zivxf%2f0ZIMF07wtZ4JhWVqGuhetKPDE3ddzOLRPyjNgetWddHqoq8Tba%2bKWDcIADYnqgH5NVdVSKvyH5VWYyhlZQiW23z1a6lZReASYfMMycNfDU2X4EhDOEa0tvUYajpsRlnDIkNcLjxT4KPyrZhl5tVsHECCY0Sasy%2f6zh9ce%2b3HE%2bOEtux%2bEHKfBWrkzwt1vpwyn%2fnXzVd%2bQumpQLw5DOZ2DltHZs%2bfmQ96MoMrBgSx8jS%2bQkR3NQjGAysUOqXK%2fAl38ryHzGe0nSeMkLo5BRYEgiEJK%2bftnZqsEQbZC98E8Fyt2zMGiofGQrR1i5v3gRoOCfqjNYJQAft4ru6GCR5kpm0CsvVvOnKmnA%3d%3d"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"TransactionResponse"</span><span class="p">:</span><span class="w"> </span><span class="s2">"true"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"MetaTag"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-    </span><span class="s2">"MemberUsername"</span><span class="p">:</span><span class="w"> </span><span class="s2">"RT-mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"MemberUsername"</span><span class="p">:</span><span class="w"> </span><span class="s2">"RT-12345-mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"MemberProvider"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
     </span><span class="s2">"IsArnProvider"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
     </span><span class="s2">"MemberType"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Member"</span><span class="w">
