--- a/index.html
+++ b/index.html
@@ -339,123 +339,9 @@ If you use our portal's UI and wanted to linking directly to a particuilar page 
 <h1 id='common-value-maps'>Common value maps</h1><h2 id='currency'><code>currency</code></h2>
 <p>Supported currencies are located in our static database files. Request access if needed. Major 3-letter currency references (e.g., &quot;USD&quot;, &quot;CNY&quot;, &quot;CAD&quot;, etc.) are supported.</p>
 <h2 id='gateway'><code>gateway</code></h2>
-<p>Optional filter. This should be either left empty to return all sources of supply or specified by a single integer or comma separated list of integers represented by the following:</p>
+<p>Optional filter. This should be either left empty to return all sources of supply or specified by a single integer or comma separated list of integers. </p>
 
-<table><thead>
-<tr>
-<th>Gateway ID</th>
-<th>Gateway Name</th>
-</tr>
-</thead><tbody>
-<tr>
-<td>1</td>
-<td>ARN Hotel Wholesale</td>
-</tr>
-<tr>
-<td>2</td>
-<td>Travelport Negotiated Commissionable</td>
-</tr>
-<tr>
-<td>3</td>
-<td>Travelport Wholesale</td>
-</tr>
-<tr>
-<td>4</td>
-<td>Travelport Commissionable</td>
-</tr>
-<tr>
-<td>5</td>
-<td>Tourico Hotel Wholesale</td>
-</tr>
-<tr>
-<td>16</td>
-<td>ARN Group Commissionable</td>
-</tr>
-<tr>
-<td>17</td>
-<td>ARN Hotel Commissionable</td>
-</tr>
-<tr>
-<td>20</td>
-<td>ARN On-Hold Commissionable</td>
-</tr>
-<tr>
-<td>30</td>
-<td>Expedia</td>
-</tr>
-<tr>
-<td>31</td>
-<td>Miki</td>
-</tr>
-<tr>
-<td>32</td>
-<td>GetARoom</td>
-</tr>
-<tr>
-<td>33</td>
-<td>ARN Group Wholesale</td>
-</tr>
-<tr>
-<td>34</td>
-<td>HotelBeds</td>
-</tr>
-<tr>
-<td>35</td>
-<td>Bonotel</td>
-</tr>
-<tr>
-<td>36</td>
-<td>GTA</td>
-</tr>
-<tr>
-<td>37</td>
-<td>CiiRUS</td>
-</tr>
-<tr>
-<td>38</td>
-<td>Interval International</td>
-</tr>
-<tr>
-<td>39</td>
-<td>RCI</td>
-</tr>
-<tr>
-<td>40</td>
-<td>Priceline Wholesale</td>
-</tr>
-<tr>
-<td>41</td>
-<td>Priceline Commissionable</td>
-</tr>
-<tr>
-<td>42</td>
-<td>Priceline Booking.com​</td>
-</tr>
-<tr>
-<td>43</td>
-<td>Mark International</td>
-</tr>
-<tr>
-<td>44</td>
-<td>Amadeus Commitionable</td>
-</tr>
-<tr>
-<td>45</td>
-<td>Amadeus Negotiated Commissionable</td>
-</tr>
-<tr>
-<td>47</td>
-<td>Lots Of Hotels</td>
-</tr>
-<tr>
-<td>48</td>
-<td>Jack Travel</td>
-</tr>
-<tr>
-<td>49</td>
-<td>Travellanda</td>
-</tr>
-</tbody></table>
+<p>Please <a href="mailto:hello@hotelsforhope.com?Subject=Request%20for%20API%20Gateway%20Codes">contact us</a> for an updated list of gateways.</p>
 <h2 id='propertyamenities'><code>propertyAmenities</code></h2>
 <p>Optional filter. This should either be an integer or a list of comma separated integers represented by the following:</p>
 
