--- a/index.html
+++ b/index.html
@@ -668,6 +668,12 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
 <td>Site Admin Token</td>
 </tr>
 <tr>
+<td>Points</td>
+<td>integer</td>
+<td>No</td>
+<td>Number of points for the user</td>
+</tr>
+<tr>
 <td>ReferralId</td>
 <td>string</td>
 <td>Yes</td>
@@ -806,6 +812,12 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
 <td>string</td>
 <td>Yes</td>
 <td>Site Admin Token</td>
+</tr>
+<tr>
+<td>Points</td>
+<td>integer</td>
+<td>No</td>
+<td>Number of points for the user</td>
 </tr>
 <tr>
 <td>ReferralId</td>
