--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ If you use our portal's UI and wanted to linking directly to a particuilar page 
 <p>Along with the other common parameters to replace, additionally you must replace <code>{ADMIN-USERNAME}</code> with the username the Site Admin user uses to login to the site/portal.</p>
 
 <aside class="notice">
-The token will be encoded to ensure a valid JSON response. Be sure to decode the token before using it in another API call.
+The token will be URI encoded to ensure a valid JSON response. Be sure to decode the token before using it in another API call.
 </aside>
 <pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://api.travsrv.com/MemberAPI.aspx?</span><span class="se">\</span><span class="s2">
 username={API-USERNAME}</span><span class="se">\</span><span class="s2">
@@ -565,7 +565,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </tr>
 </tbody></table>
 <h2 id='create-a-new-member'>Create a New Member</h2>
-<p>Using the Site Admin&#39;s token you may create a new member by POSTing a <em>URL encoded</em> JSON string to this endpoint. Calling this endpoint successfully generates a member token, found in the <code>CurrentToken</code> property, which you should save for them if you want to use the &quot;Get a Member by Token&quot; call.</p>
+<p>Using the Site Admin&#39;s token you may create a new member by POSTing a <em>URI encoded</em> JSON string to this endpoint. Calling this endpoint successfully generates a member token, found in the <code>CurrentToken</code> property, which you should save for them if you want to use the &quot;Get a Member by Token&quot; call.</p>
 
 <p>You may notice this call is exactly the same as the &quot;Update an Existing Member&quot; call.</p>
 
@@ -711,7 +711,7 @@ The JSON structure includes an array of `Names`, which seems to infer the abilit
 </tr>
 </tbody></table>
 <h2 id='update-an-existing-member'>Update an Existing Member</h2>
-<p>Using the Site Admin&#39;s token you may update an existing member by POSTing a <em>URL encoded</em> JSON string to this endpoint. Successfully calling this endpoint also generates a new member token for the user in the <code>CurrentToken</code> property, which you should save for them if you want to use the &quot;Get a Member by Token&quot; call.</p>
+<p>Using the Site Admin&#39;s token you may update an existing member by POSTing a <em>URI encoded</em> JSON string to this endpoint. Successfully calling this endpoint also generates a new member token for the user in the <code>CurrentToken</code> property, which you should save for them if you want to use the &quot;Get a Member by Token&quot; call.</p>
 
 <p>You may notice this call is exactly the same as the &quot;Create a New Member&quot; call.</p>
 
