--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <td>couponcode</td>
 <td>string</td>
 <td>Yes</td>
-<td>The code to lookup</td>
+<td>The code to invalidate</td>
 </tr>
 </tbody></table>
 <h1 id='hotels'>Hotels</h1><h2 id='availability-search'>Availability Search</h2>
